--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -60,130 +60,6 @@ provider:
             - ${self:custom.metricesTableArn} # Permission for metrices table
             - ${self:custom.databaseRankingTableArn} # Permission for database rankings table
 
-resources:
-  Resources:
-    DbKompare:
-      Type: AWS::Cognito::UserPool
-      Properties:
-        UserPoolName: Db-Kompare-${self:provider.stage}
-        AutoVerifiedAttributes:
-          - email
-        UsernameAttributes:
-          - email
-        Policies:
-          PasswordPolicy:
-            MinimumLength: 8
-            RequireLowercase: true
-            RequireNumbers: true
-            RequireSymbols: true
-            RequireUppercase: true
-        Schema:
-          - AttributeDataType: String
-            Mutable: true
-            Name: email
-            Required: true
-          - AttributeDataType: String
-            Mutable: true
-            Name: name
-            Required: true
-          - AttributeDataType: String
-            Mutable: true
-            Name: role
-            Required: false
-          - AttributeDataType: String
-            Mutable: true
-            Name: status
-            Required: false
-    UserPoolClient:
-      Type: AWS::Cognito::UserPoolClient
-      Properties:
-        ClientName: Db-Kompare-Web-${self:provider.stage}
-        GenerateSecret: false
-        UserPoolId: !Ref DbKompare
-        ExplicitAuthFlows:
-          - ALLOW_USER_SRP_AUTH
-          - ALLOW_REFRESH_TOKEN_AUTH
-
-    IdentityPool:
-      Type: AWS::Cognito::IdentityPool
-      Properties:
-        IdentityPoolName: Db-Kompare-${self:provider.stage}
-        AllowUnauthenticatedIdentities: false
-        CognitoIdentityProviders:
-          - ProviderName: !GetAtt DbKompare.ProviderName
-            ClientId: !Ref UserPoolClient
-
-    UnauthorizedRole:
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Effect: Allow
-              Principal:
-                Federated: cognito-identity.amazonaws.com
-              Action: sts:AssumeRoleWithWebIdentity
-              Condition:
-                StringEquals:
-                  "cognito-identity.amazonaws.com:aud": !Ref IdentityPool
-                ForAnyValue:StringLike:
-                  "cognito-identity.amazonaws.com:amr": unauthenticated
-        Policies:
-          - PolicyName: CognitoUnauthorizedPolicy
-            PolicyDocument:
-              Version: "2012-10-17"
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - mobileanalytics:PutEvents
-                    - cognito-sync:*
-                  Resource: "*"
-
-    CognitoAuthorizedRole:
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Effect: Allow
-              Principal:
-                Federated: cognito-identity.amazonaws.com
-              Action: sts:AssumeRoleWithWebIdentity
-              Condition:
-                StringEquals:
-                  "cognito-identity.amazonaws.com:aud": !Ref IdentityPool
-                ForAnyValue:StringLike:
-                  "cognito-identity.amazonaws.com:amr": authenticated
-        Policies:
-          - PolicyName: CognitoAuthorizedPolicy
-            PolicyDocument:
-              Version: "2012-10-17"
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - mobileanalytics:PutEvents
-                    - cognito-sync:*
-                    - cognito-identity:*
-                  Resource: "*"
-
-    IdentityPoolRoleAttachment:
-      Type: AWS::Cognito::IdentityPoolRoleAttachment
-      Properties:
-        IdentityPoolId: !Ref IdentityPool
-        Roles:
-          authenticated: !GetAtt CognitoAuthorizedRole.Arn
-          unauthenticated: !GetAtt UnauthorizedRole.Arn
-    VendorGroup:
-      Type: AWS::Cognito::UserPoolGroup
-      Properties:
-        GroupName: VENDORS
-        UserPoolId: !Ref DbKompare
-    AdminGroup:
-      Type: AWS::Cognito::UserPoolGroup
-      Properties:
-        GroupName: ADMINS
-        UserPoolId: !Ref DbKompare
-
 functions:
   postConfirmation:
     handler: functions/auth/postConfirmation.handler
@@ -286,3 +162,137 @@ functions:
     events:
       - schedule:
           rate: cron(50 5 * * ? *) # Runs daily at 5:45 PM UTC
+
+resources:
+  Resources:
+    DbKompare:
+      Type: AWS::Cognito::UserPool
+      Properties:
+        UserPoolName: Db-Kompare-${self:provider.stage}
+        AutoVerifiedAttributes:
+          - email
+        UsernameAttributes:
+          - email
+        Policies:
+          PasswordPolicy:
+            MinimumLength: 8
+            RequireLowercase: true
+            RequireNumbers: true
+            RequireSymbols: true
+            RequireUppercase: true
+        Schema:
+          - AttributeDataType: String
+            Mutable: true
+            Name: email
+            Required: true
+          - AttributeDataType: String
+            Mutable: true
+            Name: name
+            Required: true
+          - AttributeDataType: String
+            Mutable: true
+            Name: role
+            Required: false
+          - AttributeDataType: String
+            Mutable: true
+            Name: status
+            Required: false
+        LambdaConfig:
+          PostConfirmation: arn:aws:lambda:eu-west-1:253490764757:function:api-functions-${self:provider.stage}-postConfirmation
+    UserPoolClient:
+      Type: AWS::Cognito::UserPoolClient
+      Properties:
+        ClientName: Db-Kompare-Web-${self:provider.stage}
+        GenerateSecret: false
+        UserPoolId: !Ref DbKompare
+        ExplicitAuthFlows:
+          - ALLOW_USER_SRP_AUTH
+          - ALLOW_REFRESH_TOKEN_AUTH
+
+    IdentityPool:
+      Type: AWS::Cognito::IdentityPool
+      Properties:
+        IdentityPoolName: Db-Kompare-${self:provider.stage}
+        AllowUnauthenticatedIdentities: false
+        CognitoIdentityProviders:
+          - ProviderName: !GetAtt DbKompare.ProviderName
+            ClientId: !Ref UserPoolClient
+
+    UnauthorizedRole:
+      Type: AWS::IAM::Role
+      Properties:
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                Federated: cognito-identity.amazonaws.com
+              Action: sts:AssumeRoleWithWebIdentity
+              Condition:
+                StringEquals:
+                  "cognito-identity.amazonaws.com:aud": !Ref IdentityPool
+                ForAnyValue:StringLike:
+                  "cognito-identity.amazonaws.com:amr": unauthenticated
+        Policies:
+          - PolicyName: CognitoUnauthorizedPolicy
+            PolicyDocument:
+              Version: "2012-10-17"
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - mobileanalytics:PutEvents
+                    - cognito-sync:*
+                  Resource: "*"
+
+    CognitoAuthorizedRole:
+      Type: AWS::IAM::Role
+      Properties:
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                Federated: cognito-identity.amazonaws.com
+              Action: sts:AssumeRoleWithWebIdentity
+              Condition:
+                StringEquals:
+                  "cognito-identity.amazonaws.com:aud": !Ref IdentityPool
+                ForAnyValue:StringLike:
+                  "cognito-identity.amazonaws.com:amr": authenticated
+        Policies:
+          - PolicyName: CognitoAuthorizedPolicy
+            PolicyDocument:
+              Version: "2012-10-17"
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - mobileanalytics:PutEvents
+                    - cognito-sync:*
+                    - cognito-identity:*
+                  Resource: "*"
+
+    IdentityPoolRoleAttachment:
+      Type: AWS::Cognito::IdentityPoolRoleAttachment
+      Properties:
+        IdentityPoolId: !Ref IdentityPool
+        Roles:
+          authenticated: !GetAtt CognitoAuthorizedRole.Arn
+          unauthenticated: !GetAtt UnauthorizedRole.Arn
+    UserPoolInvokePostConfirmationLambdaPermission:
+      Type: AWS::Lambda::Permission
+      Properties:
+        Action: lambda:invokeFunction
+        FunctionName: !Ref PostConfirmationLambdaFunction
+        Principal: cognito-idp.amazonaws.com
+        SourceArn: !GetAtt DbKompare.Arn
+
+    VendorGroup:
+      Type: AWS::Cognito::UserPoolGroup
+      Properties:
+        GroupName: VENDORS
+        UserPoolId: !Ref DbKompare
+    AdminGroup:
+      Type: AWS::Cognito::UserPoolGroup
+      Properties:
+        GroupName: ADMINS
+        UserPoolId: !Ref DbKompare
