woked on github auth

--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -15,13 +15,13 @@ custom:
     dev:
       urls:
         - http://localhost:3000/auth
-        - https://db-comparison.vercel.app
-        - https://db-comparison.vercel.app/auth
+        - https://db-kompare-frontend.vercel.app
+        - https://db-kompare-frontend.vercel.app/auth
   COGNITO_LOGOUT_URLS:
     dev:
       urls:
         - http://localhost:3000
-        - https://db-comparison.vercel.app
+        - https://db-kompare-frontend.vercel.app
   serverless-offline:
     httpPort: 4000
 
@@ -47,6 +47,8 @@ provider:
     BING_API_KEY: ${env:BING_API_KEY}
     CLIENT_ID: ${env:CLIENT_ID}
     CLIENT_SECRET: ${env:CLIENT_SECRET}
+    GITHUB_CLIENT_ID: ${env:GITHUB_CLIENT_ID}
+    GITHUB_CLIENT_SECRET: ${env:GITHUB_CLIENT_SECRET}
 
   apiGateway:
     apiKeys:
@@ -67,6 +69,7 @@ provider:
             - dynamodb:BatchWriteItem
           Resource:
             - ${self:custom.databasesTableArn}/index/byStatus
+            - ${self:custom.usersTableArn}/index/byEmail
             - ${self:custom.metricesTableArn}/index/byStatusAndDate
             - ${self:custom.databaseRankingTableArn}/index/byStatusAndDate
             - ${self:custom.databasesTableArn} # Permission for databases table
@@ -84,6 +87,20 @@ functions:
     handler: functions/auth/postConfirmation.handler
     environment:
       COGNITO_USER_POOL_ID: !Ref DbKompare
+
+  githubAccessToken:
+    handler: functions/auth/githubAccessTokenHandler.handler
+    events:
+      - http:
+          path: /oauth/github/access-token
+          method: post
+
+  githubUserInfo:
+    handler: functions/auth/githubUserInfoHandler.handler
+    events:
+      - http:
+          path: /oauth/github/user-info
+          method: get
 
   createDatabase:
     handler: functions/databases/createDatabase.handler
@@ -109,6 +126,15 @@ functions:
           method: get
           private: true
           cors: true
+  isUserExistInDB:
+    handler: functions/auth/isUserExistInDB.handler
+    events:
+      - http:
+          path: /is-user-exist
+          method: get
+          private: true
+          cors: true
+
   updateUserDetails:
     handler: functions/users/updateUserDetails.handler
     events:
@@ -242,6 +268,8 @@ resources:
           PostConfirmation: arn:aws:lambda:eu-west-1:253490764757:function:api-functions-${self:provider.stage}-postConfirmation
     UserPoolClient:
       Type: AWS::Cognito::UserPoolClient
+      # DependsOn:
+      #   - GitHubIdentityProvider
       Properties:
         ClientName: Db-Kompare-Web-${self:provider.stage}
         GenerateSecret: false
@@ -270,6 +298,7 @@ resources:
         SupportedIdentityProviders:
           - COGNITO
           - Google
+          - GitHub
 
     GoogleIdentityProvider:
       Type: AWS::Cognito::UserPoolIdentityProvider
@@ -285,6 +314,25 @@ resources:
           client_id: ${env:CLIENT_ID}
           client_secret: ${env:CLIENT_SECRET}
           authorize_scopes: "profile email openid"
+    GitHubIdentityProvider:
+      Type: AWS::Cognito::UserPoolIdentityProvider
+      Properties:
+        ProviderName: GitHub
+        ProviderType: OIDC
+        UserPoolId: !Ref DbKompare
+        AttributeMapping:
+          email: email
+          name: name
+        ProviderDetails:
+          client_id: ${env:GITHUB_CLIENT_ID}
+          client_secret: ${env:GITHUB_CLIENT_SECRET}
+          authorize_scopes: "user openid"
+          oidc_issuer: https://github.com
+          authorize_url: https://github.com/login/oauth/authorize
+          token_url: https://b8iy915ig0.execute-api.eu-west-1.amazonaws.com/dev/oauth/github/access-token
+          attributes_url: https://b8iy915ig0.execute-api.eu-west-1.amazonaws.com/dev/oauth/github/user-info
+          jwks_uri: https://b8iy915ig0.execute-api.eu-west-1.amazonaws.com/dev/oauth/github/access-token
+          attributes_request_method: GET
 
     DBKompareUserPoolDomain:
       Type: AWS::Cognito::UserPoolDomain
