add saved blog retrieval and deletion logic, enhance blog details with user saved status, and integrate Excel file processing

--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -79,6 +79,7 @@ provider:
             - ${self:custom.usersTableArn}/index/byEmail
             - ${self:custom.metricesTableArn}/index/byStatusAndDate
             - ${self:custom.databaseRankingTableArn}/index/byStatusAndDate
+            - ${self:custom.savedBlogsTableArn}/index/BlogIdIndex
             - ${self:custom.databasesTableArn} # Permission for databases table
             - ${self:custom.metricesTableArn} # Permission for metrices table
             - ${self:custom.blogsTableArn} # Permission for blogs table
