--- a/api-functions/package.json
+++ b/api-functions/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.30.1",
     "p-limit": "^6.1.0",
     "serverless-offline": "^14.3.4",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "serverless-dotenv-plugin": "^6.0.0"
