--- a/resources/serverless.yml
+++ b/resources/serverless.yml
@@ -143,6 +143,13 @@ resources:
           - AttributeName: blogId
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
+        GlobalSecondaryIndexes:
+          - IndexName: BlogIdIndex
+            KeySchema:
+              - AttributeName: blogId
+                KeyType: HASH
+            Projection:
+              ProjectionType: ALL
     Metrices:
       Type: AWS::DynamoDB::Table
       Properties:
