--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -284,40 +284,60 @@ functions:
     timeout: 300
     events:
       - schedule:
-          rate: cron(0 5 * * ? *) # Runs daily at 5:00 AM UTC
+          rate: cron(0 5 * * ? *) # First job at 5:00 AM UTC
+      - schedule:
+          rate: cron(5 5 * * ? *) # Second job at 5:05 AM UTC
+      - schedule:
+          rate: cron(10 5 * * ? *) # Third job at 5:10 AM UTC
+      - schedule:
+          rate: cron(15 5 * * ? *) # Fourth job at 5:15 AM UTC
+      - schedule:
+          rate: cron(20 5 * * ? *) # Fifth job at 5:20 AM UTC
+      - schedule:
+          rate: cron(25 5 * * ? *) # Sixth job at 5:25 AM UTC
 
   getStackoverflowMetrices:
     handler: functions/metrices/getStackoverflowMetrices.handler
     timeout: 300
     events:
       - schedule:
-          rate: cron(0 5 * * ? *) # Runs daily at 5:00 AM UTC
+          rate: cron(0 5 * * ? *) # First job at 5:00 AM UTC
+      - schedule:
+          rate: cron(5 5 * * ? *) # Second job at 5:05 AM UTC
+      - schedule:
+          rate: cron(10 5 * * ? *) # Third job at 5:10 AM UTC
+      - schedule:
+          rate: cron(15 5 * * ? *) # Fourth job at 5:15 AM UTC
+      - schedule:
+          rate: cron(20 5 * * ? *) # Fifth job at 5:20 AM UTC
+      - schedule:
+          rate: cron(25 5 * * ? *) # Sixth job at 5:25 AM UTC
 
   getGoogleMetrices:
     handler: functions/metrices/getGoogleMetrices.handler
     timeout: 300
     events:
       - schedule:
-          rate: cron(15 5 * * ? *) # Runs daily at 5:15 PM UTC
+          rate: cron(30 5 * * ? *) # Runs daily at 5:30 PM UTC
 
   getBingMetrices:
     handler: functions/metrices/getBingMetrices.handler
     timeout: 300
     events:
       - schedule:
-          rate: cron(30 5 * * ? *) # Runs daily at 5:30 PM UTC
+          rate: cron(40 5 * * ? *) # Runs daily at 5:40 PM UTC
 
   updatePopularity:
     handler: functions/metrices/updatePopularity.handler
     events:
       - schedule:
-          rate: cron(40 5 * * ? *) # Runs daily at 5:40 PM UTC
+          rate: cron(50 5 * * ? *) # Runs daily at 5:50 PM UTC
 
   addRanking:
     handler: functions/rankings/addRanking.handler
     events:
       - schedule:
-          rate: cron(50 5 * * ? *) # Runs daily at 5:45 PM UTC
+          rate: cron(0 6 * * ? *) # Runs daily at 6:00 PM UTC
 
 resources:
   Resources:
